thêm giao dịch, sửa đặt phòng
